# waymo-rosbag-record

./: .gitignore  README.md  docker_run.sh
Docker/: Dockerfile  build.sh  entrypoint.sh  install_package.py
catkin_ws/src/waymo_viewer/: CMakeLists.txt  package.xml
catkin_ws/src/waymo_viewer/launch/: recorder.launch
catkin_ws/src/waymo_viewer/msg/: Box.msg  CameraImage.msg  CameraImageArray.msg  Label.msg  Lidar.msg  LidarArray.msg  Metadata.msg  VehicleInfo.msg
catkin_ws/src/waymo_viewer/scripts/: cameralabel_visualization.py  recorder.py  transform.py  visualization.py  waymodata_output.py
waymo-od/waymo_open_dataset/utils/: range_image_utils.py  transform_utils.py
